Fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 
 /******************************/
 
+/* nav sticky */
 .nav {
     transition: all 0.1s linear;
     position: fixed;
@@ -34,6 +35,27 @@
     background: #ffffff;
     width: 100%;
     border-bottom: 1px solid #dddddd;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
+
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #c5d5db;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
 }
 
 /******************************/
